--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
  
  <td valign="top">
  
-  <input  type="text" name="first_name" maxlength="50" size="30">
+  <input  type="text" name="first_name" maxlength="50" size="30" required>
  
  </td>
  
@@ -29,7 +29,7 @@
  
  <td valign="top">
  
-  <input  type="text" name="last_name" maxlength="50" size="30">
+  <input  type="text" name="last_name" maxlength="50" size="30" required>
  
  </td>
  
@@ -45,7 +45,7 @@
  
  <td valign="top">
  
-  <input  type="text" name="email" maxlength="80" size="30">
+  <input  type="email" name="email" maxlength="80" size="30" required>
  
  </td>
  
@@ -61,7 +61,7 @@
  
  <td valign="top">
  
-  <input  type="text" name="telephone" maxlength="30" size="30">
+  <input  type="telephone" name="telephone" maxlength="30" size="30" required>
  
  </td>
  
@@ -77,7 +77,7 @@
  
  <td valign="top">
  
-  <textarea  name="comments" maxlength="1000" cols="25" rows="6"></textarea>
+  <textarea  name="comments" maxlength="1000" cols="25" rows="6" required></textarea>
  
  </td>
  
